adicao dos include e biblioteca para o display

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ target_include_directories(tarefa PRIVATE
 # Add any user requested libraries
 target_link_libraries(tarefa 
         hardware_i2c
-        
+        hardware_pwm
         )
 
 pico_add_extra_outputs(tarefa)
